# Sentiment_Analysis

./: .dockerignore  .env.example  Dockerfile  README.md  Sentiment.ipynb  predict.py  pyproject.toml  run.py  sentiment.py  test_client.py
api/: app.py  router.py
api/routes/: sentiment.py  summarization.py
config/: settings.py
core/: base_deployment.py  registry.py
models/: __init__.py
models/sentiment/: deployment.py  schema.py
models/summarization/: deployment.py  schema.py
server/: deploy.py  ingress.py
